--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
  <section>
  <h2>タイトル:hogehoge</h2>
  <p>コンテンツの内容:piyopiyo</p>
+ <p>ぷいきゅあぁがんばえぇ！</p>
  </section>
  </article>
  <!----- メインコンテンツ END ----->
